# junk-drawer

./: .editorconfig  .flake8  .gitignore  CONTRIBUTING.md  NOTICE  README.md  mypy.ini  pylama.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
junk_drawer/: __init__.py  errors.py  read_store.py  store.py
junk_drawer/filesystem/: __init__.py  async_filesystem.py  base.py  errors.py  sync_filesystem.py
tests/: __init__.py  conftest.py  helpers.py  test_async_filesystem_custom_parse.py  test_async_filesystem_reads.py  test_async_filesystem_writes.py  test_junk_drawer.py  test_read_store.py  test_store_json_and_migrations.py  test_store_reads.py  test_store_writes.py
tests/filesystem/: test_async_filesystem_reads.py  test_async_filesystem_writes.py  test_sync_filesystem_reads.py  test_sync_filesystem_writes.py
