[tool.poetry]
name = "junk-drawer"
version = "0.1.0"
description = "Simple JSON data storage on the filesystem"
authors = ["Opentrons Labworks <engineering@opentrons.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
mypy = "^0.782"
pytest = "^5.2"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.14.0"
mock = "^4.0.2"

[tool.black]
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
