[tool.poetry]
name = "junk-drawer"
version = "0.0.0"
description = "Simple JSON data storage on the filesystem"
authors = ["Opentrons Labworks <engineering@opentrons.com>"]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://github.com/Opentrons/junk-drawer"
repository = "https://github.com/Opentrons/junk-drawer"
documentation = "https://github.com/Opentrons/junk-drawer#readme"

include = [
  "LICENSE",
  "NOTICE"
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
mock = "^4.0.2"
mypy = "^0.790"
pytest = "^6.1.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.14.0"
flake8-annotations = "^2.4.1"

[tool.black]
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
